--- a/desafio7/Vagrantfile
+++ b/desafio7/Vagrantfile
@@ -38,7 +38,7 @@ Vagrant.configure("2") do |config|
   # Bridged networks make the machine appear as another physical device on
   # your network.
   # config.vm.network "public_network"
-
+  config.vm.network "public_network"
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
@@ -75,5 +75,5 @@ Vagrant.configure("2") do |config|
   #   apt-get install -y apache2
   # SHELL
 
-  config.vm.provision "shell", path: "install-ansible-terraform.sh", run: 'always'
+  config.vm.provision "shell", path: "install-ansible-terraform.sh"
 end
