--- a/desafio9/docker-compose.yml
+++ b/desafio9/docker-compose.yml
@@ -18,3 +18,5 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - ./db:/docker-entrypoint-initdb.d/:ro
+      ##Creamos un volumen para que sean persistentes los datos de la db
+      - ./data:/var/lib/mysql
